# manualfoobar

./: CMakeLists.txt  README.md
src/: manualfoobar.cpp
